# gura

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  conanfile.py  motivation.md
cmake/: GuraCompilerOptions.cmake  GuraLLVM.cmake
docs/: ast.md  memory-safety.md  overview.md  package.md  quicksort-roadmap.md  spec.md  stdlib.md  syntax.md
examples/: assignment.gura  associated_functions.gura  codegen_associated_functions.gura  codegen_basic.gura  codegen_field_assign.gura  codegen_loop.gura  codegen_struct.gura  core_capabilities.gura  enter_fields.gura  functions_and_binary.gura  generic_traits.gura  hello.gura  if_expr.gura  impl_methods.gura  methods.gura  new_init.gura  region_bridge.gura  struct_fields.gura  traits.gura  while_loop.gura
include/gura/ast/: Decl.h  Expr.h  Node.h  Pattern.h  Stmt.h  TypeRef.h
include/gura/basic/: Diagnostic.h  Identifier.h  SourceLocation.h  SourceManager.h  Span.h
include/gura/codegen/: LLVMCodeGen.h
include/gura/driver/: Driver.h
include/gura/hir/: Capability.h  Hir.h  Sema.h  SymbolTable.h  Type.h
include/gura/lexer/: Lexer.h  Token.h
include/gura/parser/: Parser.h
include/gura/region/: RegionIR.h  RegionVerifier.h
papers/: Dynamic Region Ownership for Concurrency Safety.md  Reference Capabilities for Flexible Memory Management: Extended Version.md
runtime/include/gura/runtime/: Cown.h  Freeze.h  Merge.h  ObjectHeader.h  Region.h
runtime/src/: Cown.cpp  Freeze.cpp  Merge.cpp  Region.cpp
src/basic/: Diagnostic.cpp  SourceManager.cpp
src/codegen/: LLVMCodeGen.cpp
src/driver/: Driver.cpp
src/hir/: Sema.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp
src/region/: RegionIR.cpp  RegionVerifier.cpp
tests/codegen/: codegen_array_test.cpp  codegen_associated_function_test.cpp  codegen_basic_test.cpp  codegen_field_assign_test.cpp  codegen_loop_test.cpp  codegen_method_test.cpp  codegen_struct_test.cpp
tests/fixtures/: array_param_swap.gura  array_partition.gura  array_swap.gura  hello.gura  quicksort.gura  return0.gura  stdio.gura  stdio_qualified.gura
tests/fixtures/module_import_alias/: main.gura  vector.gura
tests/fixtures/module_import_basic/: main.gura  math.gura
tests/fixtures/module_same_name/: a.gura  b.gura  main.gura
tests/fixtures/package_basic/: main.gura  math.gura
tests/fixtures/package_struct/: box.gura  main.gura
tests/lexer/: basic_tokens_test.cpp
tests/parser/: parse_array_test.cpp  parse_assignment_test.cpp  parse_call_binary_test.cpp  parse_core_exprs_test.cpp  parse_if_expr_test.cpp  parse_impl_method_test.cpp  parse_method_test.cpp  parse_minimal_fn_test.cpp  parse_new_init_test.cpp  parse_struct_field_test.cpp  parse_trait_test.cpp  parse_while_expr_test.cpp
tests/runtime/: region_runtime_test.cpp
tests/sema/: sema_array_test.cpp  sema_assignment_test.cpp  sema_associated_function_test.cpp  sema_call_binary_test.cpp  sema_core_language_test.cpp  sema_if_expr_test.cpp  sema_impl_method_test.cpp  sema_method_test.cpp  sema_new_init_test.cpp  sema_region_field_test.cpp  sema_struct_field_test.cpp  sema_trait_test.cpp  sema_while_expr_test.cpp
tools/gura/: main.cpp
